--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,8 @@ before_script:
 script:
   - ./_build.sh
   - ./_deploy.sh
+
+cache:
+  packages: yes
+  directories:
+  - "$TRAVIS_BUILD_DIR/_bookdown_files"
