Rename Chapter files

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: "bookdown-demo"
+book_filename: "material-ccc192"
 language:
   ui:
-    chapter_name: "Chapter "
+    chapter_name: "Capítulo "
