--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ cache: packages
 
 apt_packages:
   - libxml2-dev
-  - gdal-dev
-  - geos-dev
+  - libgdal-dev
+  - libgeos-dev
 
 r_github_packages:
   - datacamp/tutorial
