--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: r
-sudo: true
+sudo: required
+dist: trusty
 r:
   - release
 pandoc_version: 1.17.2
@@ -7,10 +8,21 @@ cache: packages
 
 apt_packages:
   - libxml2-dev
-  - libproj-dev
+  - gdal-bin
+  - libcurl4-gnutls-dev
+  - libxml2-dev
+  - libssl-dev
+  - libopenblas-base
+  - libgdal-dev
   - libgeos-dev
-  - libgdal1-dev
-  - r-cran-rgdal
+  - libproj-dev
+  - libcairo2-dev
+  - libx11-xcb-dev
+  - libxt-dev
+  - libx11-dev
+  - mesa-common-dev
+  - libglu1-mesa-dev
+  - netcdf-bin
 
 r_github_packages:
   - datacamp/tutorial
